--- a/package.json
+++ b/package.json
@@ -3,9 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "gh-pages": "^1.0.0",
     "rc-slider": "^8.3.1",
     "react": "15.6.1",
     "react-dom": "15.6.1",
+    "react-dropzone": "^4.1.3",
+    "react-icons": "^2.2.5",
+    "react-json-tree": "^0.10.9",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
     "redux-devtools": "^3.4.0",
