--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "react-dropzone": "^4.1.3",
     "react-icons": "^2.2.5",
     "react-json-tree": "^0.10.9",
+    "react-native-picker-scrollview": "^0.1.0",
     "react-redux": "^5.0.6",
+    "react-select": "^1.0.0-rc.10",
+    "react-ultra-select": "^1.0.16",
+    "react-virtualized-select": "^3.1.0",
     "redux": "^3.7.2",
     "redux-devtools": "^3.4.0",
     "redux-persist": "^4.10.0"
