--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "gh-pages": "^1.0.0",
     "rc-slider": "^8.3.1",
     "react": "15.6.1",
+    "react-browser-detection": "^1.0.3",
     "react-dom": "15.6.1",
     "react-dropzone": "^4.1.3",
     "react-icons": "^2.2.5",
