--- a/package.json
+++ b/package.json
@@ -24,12 +24,12 @@
     "react-scripts": "1.0.13"
   },
   "scripts": {
+    "predeploy": "yarn run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "homepage": "https://tangert.github.io/ELITVisualizer/"
 }
