--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.16.2",
     "gh-pages": "^1.0.0",
     "rc-slider": "^8.3.1",
     "react": "15.6.1",
@@ -18,7 +19,8 @@
     "react-virtualized-select": "^3.1.0",
     "redux": "^3.7.2",
     "redux-devtools": "^3.4.0",
-    "redux-persist": "^4.10.0"
+    "redux-persist": "^4.10.0",
+    "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
     "react-scripts": "1.0.13"
