--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "react-native-picker-scrollview": "^0.1.0",
     "react-redux": "^5.0.6",
     "react-select": "^1.0.0-rc.10",
+    "react-tooltip": "^3.4.0",
     "react-ultra-select": "^1.0.16",
     "react-virtualized-select": "^3.1.0",
     "redux": "^3.7.2",
     "redux-devtools": "^3.4.0",
     "redux-persist": "^4.10.0",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "request-promise": "^4.2.2"
   },
   "devDependencies": {
     "react-scripts": "1.0.13"
